refactor: implement header information exchange docs: change sequence-diagram.puml
