# dto/request.go
@@ -5,7 +5,7 @@ type Request struct {
 	Data      any    `json:"data"`
 }
 
-type RequestCity struct {
+type BodyCity struct {
 	CityId       int    `json:"city_id"`
 	CityName     string `json:"city_name"`
 	CityProvince int    `json:"city_province"`
@@ -13,9 +13,14 @@ type RequestCity struct {
 	Offset       int    `json:"offset"`
 }
 
-type RequestProvince struct {
+type BodyProvince struct {
 	ProvinceId   int    `json:"province_id"`
 	ProvinceName string `json:"province_name"`
 	Limit        int    `json:"limit"`
 	Offset       int    `json:"offset"`
+}
+
+type Header struct {
+	RequestId string `header:"request-id"`
+	Host      string `header:"host"`
 }
